Corrected html language

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-html{
-    head{
-        <title> fake google </title>
-    }
-    body{
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Fake Google</title>
+    </head>
+    <body>
         <img id: logo sr= "/images/google-logo.png" alt= "Google Logo" />
-    }
-}
+    </body>
+</html>
