html img correction

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fake Google</title>
     </head>
     <body>
-        <img id: logo sr= "/images/google-logo.png" alt= "Google Logo" />
+        <img id="logo" sr= "images/google-logo.png" alt= "Google Logo" >
     </body>
 </html>
