First actual version, creation of the page and positioning as well as all de css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Fake Google</title>
+        <link href="styles/google-homepage.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <img id="logo" sr= "images/google-logo.png" alt= "Google Logo" >
+        <header id="navbar">
+            <ul id="navbar-links">
+                <li class="navbar-link"> Profile </li>
+                <li class="navbar-link"> Apps </li>
+                <li class="navbar-link"> Images </li>
+                <li class="navbar-link"> Gmail </li>
+            </ul>
+        </header>
+        <div id="center">
+            <img id="logo" alt="Google Logo" src="/Users/alexgt/web-projects/the-odin-project/google-homepage/images/google-logo.png">
+            <input>
+        </div>
+        <button id="search">
+            search
+        </button>
+        <button id="lucky">
+            Im feeling lucky
+        </button>
+        <a href= "http://www.google.com">Actual Google</a>
     </body>
 </html>
