image source correction

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </ul>
         </header>
         <div id="center">
-            <img id="logo" alt="Google Logo" src="/Users/alexgt/web-projects/the-odin-project/google-homepage/images/google-logo.png">
+            <img id="logo" alt="Google Logo" src="images/google-logo.png">
             <input>
         </div>
         <button id="search">
