changes to layout

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
             Im feeling lucky
         </button>
         <a href= "http://www.google.com">Actual Google</a>
+        <footer>
+            <b id="footer-text">Training excercise, google please don't sue me</b>
+        </footer>
     </body>
 </html>
